# x-workbench

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docker/landing/: index.html.template
docker/nginx/: nginx.conf.template
docker/runtime/: entrypoint.sh
docker/supervisor/: supervisord.conf.template
tools/_shared/: __init__.py  media_core.py
tools/logo_generator/: README.md  app.py
tools/logo_generator/web/: index.html
tools/multi_format_exporter/: README.md  app.py
tools/multi_format_exporter/web/: index.html
tools/storyboard_builder/: README.md  app.py
tools/storyboard_builder/web/: index.html
tools/subtitle_studio/: README.md  app.py
tools/subtitle_studio/web/: index.html
tools/video_kit/: README.md  app.py
tools/video_kit/web/: index.html
tools/workbench_topology/: README.md  app.py  streamlit_app.py
tools/workbench_topology/web/: index.html
