[project]
name = "x-workbench"
version = "0.1.0"
description = "Monorepo workspace for human-AI coordination tools and execution workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "graphviz>=0.21",
    "pillow>=12.1.1",
    "streamlit>=1.57.0",
]
